--- a/package.json
+++ b/package.json
@@ -3,18 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "@ionic/react": "^5.0.7",
+    "@tensorflow/tfjs": "^1.7.1",
+    "cra-template": "1.0.2",
+    "ionicons": "^5.0.1",
+    "node-sass": "^4.13.1",
+    "re-resizable": "^6.3.2",
+    "react": "^16.13.0",
+    "react-autosize-textarea": "^7.0.0",
+    "react-dom": "^16.13.0",
+    "react-ionic": "^0.0.0",
+    "react-ionicons": "^3.1.4",
+    "react-router": "^5.1.2",
+    "react-router-config": "^5.1.1",
+    "react-scripts": "3.4.0",
+    "react-textarea-autosize": "^7.1.2",
+    "react-transition-group": "^4.3.0",
+    "streamsaver": "^2.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "chatApp_websocket": "node websocket_server"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -30,5 +42,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "history": "^4.10.1",
+    "react-router-dom": "^5.2.0"
   }
 }
